--- a/portafolio-es/index.html
+++ b/portafolio-es/index.html
@@ -282,6 +282,24 @@
                         </div>
                         <!--. detalles -->
                     </div>
+
+                    <div class="tarjeta">
+                        <input type="checkbox" name="">
+                        <div class="cambio red">+</div>
+                        <div class="img">
+                            <img src="img/habilidades/java.png" alt="">
+                        </div>
+                        <div class="detalles">
+                            <h3>Java</h3>
+                            <p>
+                                Java es un lenguaje de programación multiplataforma, orientado a objetos y centrado en la red, que se utiliza para codificar 
+                                aplicaciones web, software empresarial, aplicaciones móviles, macrodatos y tecnologías del servidor. Es un lenguaje rápido, 
+                                seguro y fiable que se ejecuta en miles de millones de dispositivos, incluidos ordenadores portátiles, dispositivos móviles, 
+                                consolas de videojuegos y dispositivos médicos.
+                            </p>
+                        </div>
+                        <!--. detalles -->
+                    </div>
                     <!--. tarjeta -->
 
                     <!-- <div class="tarjeta">
