--- a/portafolio-es/index.html
+++ b/portafolio-es/index.html
@@ -112,7 +112,7 @@
             <div class="contenedor contenedor-proyectos">
                 <div class="proyecto">
                     <div class="foto imagen-container containerBox">
-                        <a href="https://papopapota.github.io/PracticasJS/Curso%20JS%20Moderno%20-%20FIN/20-PROYECTO-Carrito-LS/index.html" target="_blank"><img
+                        <a href="https://papopapota.github.io/PracticasJS/JS/20-PROYECTO-Carrito-LS/index.html" target="_blank"><img
                                 src="img/proyectos/CarritoCompra.png" alt=""></a>
                     </div>
                     <div class="info">
@@ -124,7 +124,7 @@
 
                 <div class="proyecto">
                     <div class="foto imagen-container containerBox">
-                        <a href="https://papopapota.github.io/PracticasJS/Curso%20JS%20Moderno%20-%20FIN/37-PROYECTO-BuscadorRecetas/index.html" target="_blank"><img src="img/proyectos/BuscadorRecetas.png
+                        <a href="https://papopapota.github.io/PracticasJS/JS/37-PROYECTO-BuscadorRecetas/index.html" target="_blank"><img src="img/proyectos/BuscadorRecetas.png
                             "
                                 alt=""></a>
                     </div>
@@ -137,7 +137,7 @@
 
                 <div class="proyecto">
                     <div class="foto">
-                        <a href="https://papopapota.github.io/PracticasJS/Curso%20JS%20Moderno%20-%20FIN/39-PROYECTO-Criptomonedas/index.html" target="_blank"><img src="img/proyectos/Criptomonedas.png"
+                        <a href="https://papopapota.github.io/PracticasJS/JS/39-PROYECTO-Criptomonedas/index.html" target="_blank"><img src="img/proyectos/Criptomonedas.png"
                                 alt=""></a>
                     </div>
                     <div class="info">
@@ -150,7 +150,7 @@
 
                 <div class="proyecto">
                     <div class="foto">
-                        <a href="https://papopapota.github.io/PracticasJS/Curso%20JS%20Moderno%20-%20FIN/53-Webpack-ESLint/index.html" target="_blank"><img
+                        <a href="https://papopapota.github.io/PracticasJS/JS/53-Webpack-ESLint/index.html" target="_blank"><img
                                 src="img/proyectos/Veterinaria.png" alt=""></a>
                     </div>
                     <div class="info">
