--- a/portafolio-es/index.html
+++ b/portafolio-es/index.html
@@ -11,11 +11,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Portafolio online de un desarrollador web. Desarrollador front-end Geraldo González, creador de sitios webs atractivos, dinamicos e intuitivos.">
+    <meta name="description" content="Portafolio online de un desarrollador web. Desarrollador front-end Daniel Olivares, creador de sitios webs atractivos, dinamicos e intuitivos.">
     <meta name="keywords" content="desarrollador web, diseñador, desarrollador front-end">
-    <meta name="author" content="Geraldo González">
+    <meta name="author" content="Daniel Olivares">
 
-    <title>Geraldo González | Desarrollador Web</title>
+    <title>Daniel Olivares | Desarrollador Web</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css">
@@ -361,10 +361,7 @@
                     title="Linkedin"><i class="fab fa-linkedin-in"></i></a>
                 <a href="https://www.instagram.com/htpps.daniel/" target="_blank" class="social instagram" title="Instagram"><i
                         class="fab fa-instagram"></i></a>
-                <!-- <a href="https://www.twitter.com/geraldgonzalez_" target="_blank" class="social twitter" title="Twitter"><i
-                        class="fab fa-twitter"></i></a> -->
-                <!-- <a href="https://www.youtube.com/channel/UCxPGZROtAFFqwWXJcxGqVlQ?view_as=subscriber" target="_blank" 
-                    class="social youtube" title="YouTube"><i class="fab fa-youtube"></i></a>-->
+ 
                 <a href="https://github.com/papopapota/" target="_blank" class="social github" title="GitHub"><i
                         class="fab fa-github"></i></a>
             </div>
